src/app/chat-page/info/info.component.scss
.user-info-container {
  width: 277px;
  .user-header {
    height: 79px;
    border-bottom: 1px solid #dbe0e0;
    position: relative;
    div {
      display: inline-block;
      position: absolute;
      width: 24px;
      height: 28px;
      top: 31px;
      left: 26px;
      cursor: pointer;
      svg {
        margin-bottom: 30px;
        fill: #81868b;
      }
    }
    div:hover svg {
      fill: #000;
    }
    span {
      position: absolute;
      font-size: 14px;
      font-weight: 300;
      right: 41px;
      top: 34px;
      color: #696e73;
    }
  }
  .user-info {
    position: relative;
    button {
      border-radius: 50%;
      border: 1px solid #666666;
      background-color: #666;
      position: absolute;left: 10px;
      top: 19px;
      width: 17px;
      height: 17px;
      cursor: pointer;
    }
    .svg-more {
      width: 17px;
      height: 17px;
      position: absolute;
      right: 10px;
      top: 19px;
      right: 23px;
      fill: #666666;
      cursor: pointer;
      .dropdown {
        display: none;
        position: absolute;
        right: 0;
        top: 10px;
        border-radius: 20px;
        .dropdown-menu {
          border-radius: 5px;
          margin: 0;
          padding: 0;
          list-style: none;
          background-color: #262c34;
          overflow: hidden;
          li {
            text-align: center;
            width: 80px;
            height: 25px;
            font-size: 12px;
            line-height: 25px;
            color: #9a9da0;
          }
          li:hover {
            background-color: #3d4249;
          }
        }
      }
    }
    .svg-more:hover .dropdown {
      display: inline-block;
    }
    .svg-more:hover {
      fill: #000;
    }
    img {
      display: inline-block;
      margin: 36px 0 24px 80px;
      height: 120px;
      width: 120px;
      background-color: red;
      border-radius: 50%;
    }
    h3 {
      color: #293037;
      font-size: 20px;
      font-weight: 500;
      margin: 0 auto;
      display: block;
      text-align: center;
    }
    .city-info {
      color: #696e73;
      text-align: center;
      font-size: 14px;
      font-weight: 300;
      padding-top: 2px;
      padding-left: 2px;
    }
    .user-data {
      list-style: none;
      width: 100%;
      padding: 0;
      border-top: 1px solid #e5e5e5;
      margin-top: 35px;
      padding-top: 19px;
      li {
        width: 218px;
        margin: 0 auto;
        height: 52px;
        box-sizing: border-box;
        padding: 0;
        line-height: 49px;
        span {
          font-size: 13px;
          font-weight: 300;
          color: #54595f;
          float: right;
          padding-right: 5px;
        }
        span:first-child {
          font-size: 13px;
          font-weight: 500;
          color: #54595f;
          float: left;
        }
      }
      li:not(:last-child) {
        border-bottom: 1px solid #e5e5e5;
      }
    }
  }
}

